--- a/lesson18/lesson18_4.ipynb
+++ b/lesson18/lesson18_4.ipynb
@@ -1008,6 +1008,456 @@
     "    return pd.Series([s.mean(), s.max(), s.min()], index=[\"平均\",\"最高分\",\"最低分\"])\n",
     "stu.apply(efg, axis = 1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>平均</th>\n",
+       "      <th>最高分</th>\n",
+       "      <th>最低分</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>第1號</th>\n",
+       "      <td>85.4</td>\n",
+       "      <td>英文(96)</td>\n",
+       "      <td>地理(76)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第2號</th>\n",
+       "      <td>80.4</td>\n",
+       "      <td>地理(98)</td>\n",
+       "      <td>數學(58)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第3號</th>\n",
+       "      <td>77.2</td>\n",
+       "      <td>數學(88)</td>\n",
+       "      <td>英文(63)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第4號</th>\n",
+       "      <td>64.0</td>\n",
+       "      <td>國文(80)</td>\n",
+       "      <td>英文(51)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第5號</th>\n",
+       "      <td>87.0</td>\n",
+       "      <td>國文(95)</td>\n",
+       "      <td>歷史(76)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第6號</th>\n",
+       "      <td>87.2</td>\n",
+       "      <td>國文(100)</td>\n",
+       "      <td>數學(63)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第7號</th>\n",
+       "      <td>71.4</td>\n",
+       "      <td>英文(88)</td>\n",
+       "      <td>歷史(62)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第8號</th>\n",
+       "      <td>74.4</td>\n",
+       "      <td>英文(89)</td>\n",
+       "      <td>國文(50)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第9號</th>\n",
+       "      <td>72.0</td>\n",
+       "      <td>歷史(96)</td>\n",
+       "      <td>英文(52)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第10號</th>\n",
+       "      <td>71.8</td>\n",
+       "      <td>地理(93)</td>\n",
+       "      <td>國文(53)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第11號</th>\n",
+       "      <td>80.2</td>\n",
+       "      <td>地理(99)</td>\n",
+       "      <td>數學(63)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第12號</th>\n",
+       "      <td>69.4</td>\n",
+       "      <td>數學(94)</td>\n",
+       "      <td>國文(59)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第13號</th>\n",
+       "      <td>74.2</td>\n",
+       "      <td>英文(92)</td>\n",
+       "      <td>國文(65)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第14號</th>\n",
+       "      <td>80.6</td>\n",
+       "      <td>國文(95)</td>\n",
+       "      <td>英文(56)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第15號</th>\n",
+       "      <td>78.4</td>\n",
+       "      <td>地理(99)</td>\n",
+       "      <td>國文(54)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第16號</th>\n",
+       "      <td>67.6</td>\n",
+       "      <td>歷史(85)</td>\n",
+       "      <td>地理(61)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第17號</th>\n",
+       "      <td>80.8</td>\n",
+       "      <td>地理(99)</td>\n",
+       "      <td>國文(66)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第18號</th>\n",
+       "      <td>75.4</td>\n",
+       "      <td>地理(100)</td>\n",
+       "      <td>英文(51)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第19號</th>\n",
+       "      <td>84.0</td>\n",
+       "      <td>地理(97)</td>\n",
+       "      <td>數學(70)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第20號</th>\n",
+       "      <td>83.2</td>\n",
+       "      <td>國文(91)</td>\n",
+       "      <td>數學(74)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第21號</th>\n",
+       "      <td>76.6</td>\n",
+       "      <td>地理(100)</td>\n",
+       "      <td>歷史(59)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第22號</th>\n",
+       "      <td>69.8</td>\n",
+       "      <td>地理(82)</td>\n",
+       "      <td>英文(58)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第23號</th>\n",
+       "      <td>79.2</td>\n",
+       "      <td>地理(97)</td>\n",
+       "      <td>國文(59)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第24號</th>\n",
+       "      <td>68.6</td>\n",
+       "      <td>歷史(92)</td>\n",
+       "      <td>地理(53)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第25號</th>\n",
+       "      <td>86.2</td>\n",
+       "      <td>地理(100)</td>\n",
+       "      <td>國文(71)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第26號</th>\n",
+       "      <td>77.6</td>\n",
+       "      <td>數學(97)</td>\n",
+       "      <td>英文(53)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第27號</th>\n",
+       "      <td>81.8</td>\n",
+       "      <td>地理(98)</td>\n",
+       "      <td>國文(64)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第28號</th>\n",
+       "      <td>72.0</td>\n",
+       "      <td>數學(100)</td>\n",
+       "      <td>國文(52)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第29號</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>歷史(93)</td>\n",
+       "      <td>國文(56)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第30號</th>\n",
+       "      <td>71.2</td>\n",
+       "      <td>國文(93)</td>\n",
+       "      <td>歷史(55)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第31號</th>\n",
+       "      <td>76.2</td>\n",
+       "      <td>地理(93)</td>\n",
+       "      <td>歷史(50)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第32號</th>\n",
+       "      <td>79.0</td>\n",
+       "      <td>英文(100)</td>\n",
+       "      <td>地理(50)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第33號</th>\n",
+       "      <td>62.6</td>\n",
+       "      <td>歷史(95)</td>\n",
+       "      <td>國文(51)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第34號</th>\n",
+       "      <td>71.0</td>\n",
+       "      <td>歷史(87)</td>\n",
+       "      <td>地理(51)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第35號</th>\n",
+       "      <td>74.6</td>\n",
+       "      <td>國文(98)</td>\n",
+       "      <td>歷史(52)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第36號</th>\n",
+       "      <td>65.8</td>\n",
+       "      <td>英文(92)</td>\n",
+       "      <td>數學(50)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第37號</th>\n",
+       "      <td>78.4</td>\n",
+       "      <td>數學(95)</td>\n",
+       "      <td>國文(63)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第38號</th>\n",
+       "      <td>76.8</td>\n",
+       "      <td>數學(93)</td>\n",
+       "      <td>英文(65)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第39號</th>\n",
+       "      <td>83.8</td>\n",
+       "      <td>地理(100)</td>\n",
+       "      <td>數學(74)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第40號</th>\n",
+       "      <td>72.0</td>\n",
+       "      <td>歷史(89)</td>\n",
+       "      <td>地理(56)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第41號</th>\n",
+       "      <td>72.6</td>\n",
+       "      <td>國文(87)</td>\n",
+       "      <td>數學(55)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第42號</th>\n",
+       "      <td>79.6</td>\n",
+       "      <td>國文(96)</td>\n",
+       "      <td>數學(64)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第43號</th>\n",
+       "      <td>65.0</td>\n",
+       "      <td>國文(78)</td>\n",
+       "      <td>地理(50)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第44號</th>\n",
+       "      <td>78.8</td>\n",
+       "      <td>歷史(100)</td>\n",
+       "      <td>英文(54)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第45號</th>\n",
+       "      <td>79.4</td>\n",
+       "      <td>數學(97)</td>\n",
+       "      <td>國文(55)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第46號</th>\n",
+       "      <td>76.8</td>\n",
+       "      <td>國文(98)</td>\n",
+       "      <td>英文(55)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第47號</th>\n",
+       "      <td>66.0</td>\n",
+       "      <td>國文(74)</td>\n",
+       "      <td>數學(58)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第48號</th>\n",
+       "      <td>77.8</td>\n",
+       "      <td>數學(96)</td>\n",
+       "      <td>國文(57)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第49號</th>\n",
+       "      <td>78.8</td>\n",
+       "      <td>英文(92)</td>\n",
+       "      <td>數學(68)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第50號</th>\n",
+       "      <td>80.6</td>\n",
+       "      <td>英文(99)</td>\n",
+       "      <td>國文(61)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        平均      最高分     最低分\n",
+       "第1號   85.4   英文(96)  地理(76)\n",
+       "第2號   80.4   地理(98)  數學(58)\n",
+       "第3號   77.2   數學(88)  英文(63)\n",
+       "第4號   64.0   國文(80)  英文(51)\n",
+       "第5號   87.0   國文(95)  歷史(76)\n",
+       "第6號   87.2  國文(100)  數學(63)\n",
+       "第7號   71.4   英文(88)  歷史(62)\n",
+       "第8號   74.4   英文(89)  國文(50)\n",
+       "第9號   72.0   歷史(96)  英文(52)\n",
+       "第10號  71.8   地理(93)  國文(53)\n",
+       "第11號  80.2   地理(99)  數學(63)\n",
+       "第12號  69.4   數學(94)  國文(59)\n",
+       "第13號  74.2   英文(92)  國文(65)\n",
+       "第14號  80.6   國文(95)  英文(56)\n",
+       "第15號  78.4   地理(99)  國文(54)\n",
+       "第16號  67.6   歷史(85)  地理(61)\n",
+       "第17號  80.8   地理(99)  國文(66)\n",
+       "第18號  75.4  地理(100)  英文(51)\n",
+       "第19號  84.0   地理(97)  數學(70)\n",
+       "第20號  83.2   國文(91)  數學(74)\n",
+       "第21號  76.6  地理(100)  歷史(59)\n",
+       "第22號  69.8   地理(82)  英文(58)\n",
+       "第23號  79.2   地理(97)  國文(59)\n",
+       "第24號  68.6   歷史(92)  地理(53)\n",
+       "第25號  86.2  地理(100)  國文(71)\n",
+       "第26號  77.6   數學(97)  英文(53)\n",
+       "第27號  81.8   地理(98)  國文(64)\n",
+       "第28號  72.0  數學(100)  國文(52)\n",
+       "第29號  77.0   歷史(93)  國文(56)\n",
+       "第30號  71.2   國文(93)  歷史(55)\n",
+       "第31號  76.2   地理(93)  歷史(50)\n",
+       "第32號  79.0  英文(100)  地理(50)\n",
+       "第33號  62.6   歷史(95)  國文(51)\n",
+       "第34號  71.0   歷史(87)  地理(51)\n",
+       "第35號  74.6   國文(98)  歷史(52)\n",
+       "第36號  65.8   英文(92)  數學(50)\n",
+       "第37號  78.4   數學(95)  國文(63)\n",
+       "第38號  76.8   數學(93)  英文(65)\n",
+       "第39號  83.8  地理(100)  數學(74)\n",
+       "第40號  72.0   歷史(89)  地理(56)\n",
+       "第41號  72.6   國文(87)  數學(55)\n",
+       "第42號  79.6   國文(96)  數學(64)\n",
+       "第43號  65.0   國文(78)  地理(50)\n",
+       "第44號  78.8  歷史(100)  英文(54)\n",
+       "第45號  79.4   數學(97)  國文(55)\n",
+       "第46號  76.8   國文(98)  英文(55)\n",
+       "第47號  66.0   國文(74)  數學(58)\n",
+       "第48號  77.8   數學(96)  國文(57)\n",
+       "第49號  78.8   英文(92)  數學(68)\n",
+       "第50號  80.6   英文(99)  國文(61)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def efg(s)-> pd.Series:    #return series\n",
+    "    max_name = s[s == s.max()].index.values.tolist()[0]\n",
+    "    min_name = s[s == s.min()].index.values.tolist()[0]\n",
+    "    return pd.Series([s.mean(), f'{max_name}({s.max()})',f'{min_name}({s.min()})'], \n",
+    "                     index=[\"平均\",\"最高分\",\"最低分\"])\n",
+    "stu.apply(efg, axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "國文    80\n",
+       "英文    96\n",
+       "數學    96\n",
+       "地理    76\n",
+       "歷史    79\n",
+       "Name: 第1號, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stu1 = stu.iloc[0]\n",
+    "stu1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'英文'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stu1[stu1 == stu1.max()].index.values.tolist()[0]"
+   ]
   }
  ],
  "metadata": {
