--- a/lesson19/lesson19_2.ipynb
+++ b/lesson19/lesson19_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,50 +38,50 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2020-01-01</td>\n",
+       "      <td>2023-01-01</td>\n",
        "      <td>900</td>\n",
-       "      <td>7552</td>\n",
-       "      <td>8154</td>\n",
+       "      <td>8030</td>\n",
+       "      <td>8241</td>\n",
        "      <td>900</td>\n",
        "      <td>基隆</td>\n",
        "      <td>基隆市仁愛區港西街5號</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2020-01-01</td>\n",
+       "      <td>2023-01-01</td>\n",
        "      <td>910</td>\n",
-       "      <td>1020</td>\n",
-       "      <td>1135</td>\n",
+       "      <td>1017</td>\n",
+       "      <td>1326</td>\n",
        "      <td>910</td>\n",
        "      <td>三坑</td>\n",
        "      <td>基隆市仁愛區德厚里龍安街 206 號</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2020-01-01</td>\n",
+       "      <td>2023-01-01</td>\n",
        "      <td>920</td>\n",
-       "      <td>1623</td>\n",
-       "      <td>1972</td>\n",
+       "      <td>1400</td>\n",
+       "      <td>1705</td>\n",
        "      <td>920</td>\n",
        "      <td>八堵</td>\n",
        "      <td>基隆市暖暖區八南里八堵路 142 號</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2020-01-01</td>\n",
+       "      <td>2023-01-01</td>\n",
        "      <td>930</td>\n",
-       "      <td>4130</td>\n",
-       "      <td>4813</td>\n",
+       "      <td>3558</td>\n",
+       "      <td>4398</td>\n",
        "      <td>930</td>\n",
        "      <td>七堵</td>\n",
        "      <td>基隆市七堵區長興里東新街 2 號</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2020-01-01</td>\n",
+       "      <td>2023-01-01</td>\n",
        "      <td>940</td>\n",
-       "      <td>1818</td>\n",
-       "      <td>2128</td>\n",
+       "      <td>1509</td>\n",
+       "      <td>1815</td>\n",
        "      <td>940</td>\n",
        "      <td>百福</td>\n",
        "      <td>基隆市七堵區堵南里明德三路 1 之 1 號</td>\n",
@@ -97,73 +97,73 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86927</th>\n",
-       "      <td>2020-12-31</td>\n",
+       "      <th>86604</th>\n",
+       "      <td>2023-12-31</td>\n",
        "      <td>7360</td>\n",
-       "      <td>3523</td>\n",
-       "      <td>3602</td>\n",
+       "      <td>7916</td>\n",
+       "      <td>8252</td>\n",
        "      <td>7360</td>\n",
        "      <td>瑞芳</td>\n",
        "      <td>新北市瑞芳區龍潭里明燈路三段 82 號</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86928</th>\n",
-       "      <td>2020-12-31</td>\n",
+       "      <th>86605</th>\n",
+       "      <td>2023-12-31</td>\n",
        "      <td>7361</td>\n",
-       "      <td>3</td>\n",
-       "      <td>18</td>\n",
+       "      <td>164</td>\n",
+       "      <td>195</td>\n",
        "      <td>7361</td>\n",
        "      <td>海科館</td>\n",
        "      <td>基隆市中正區長潭里</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86929</th>\n",
-       "      <td>2020-12-31</td>\n",
+       "      <th>86606</th>\n",
+       "      <td>2023-12-31</td>\n",
        "      <td>7362</td>\n",
-       "      <td>28</td>\n",
-       "      <td>34</td>\n",
+       "      <td>652</td>\n",
+       "      <td>720</td>\n",
        "      <td>7362</td>\n",
        "      <td>八斗子</td>\n",
        "      <td>新北市瑞芳區建基路2段121號隔壁 砂子里省道臺 2 線 (與新北市瑞芳區交界處、無站房)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86930</th>\n",
-       "      <td>2020-12-31</td>\n",
+       "      <th>86607</th>\n",
+       "      <td>2023-12-31</td>\n",
        "      <td>7380</td>\n",
-       "      <td>609</td>\n",
-       "      <td>604</td>\n",
+       "      <td>1526</td>\n",
+       "      <td>656</td>\n",
        "      <td>7380</td>\n",
        "      <td>四腳亭</td>\n",
        "      <td>新北市瑞芳區吉慶里中央路 65 號</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86931</th>\n",
-       "      <td>2020-12-31</td>\n",
+       "      <th>86608</th>\n",
+       "      <td>2023-12-31</td>\n",
        "      <td>7390</td>\n",
-       "      <td>377</td>\n",
-       "      <td>444</td>\n",
+       "      <td>576</td>\n",
+       "      <td>447</td>\n",
        "      <td>7390</td>\n",
        "      <td>暖暖</td>\n",
        "      <td>基隆市暖暖區暖暖里暖暖街 51 號</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>86932 rows × 7 columns</p>\n",
+       "<p>86609 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "              日期  車站代碼  進站人數  出站人數    編碼 車站名稱  \\\n",
-       "0     2020-01-01   900  7552  8154   900   基隆   \n",
-       "1     2020-01-01   910  1020  1135   910   三坑   \n",
-       "2     2020-01-01   920  1623  1972   920   八堵   \n",
-       "3     2020-01-01   930  4130  4813   930   七堵   \n",
-       "4     2020-01-01   940  1818  2128   940   百福   \n",
+       "0     2023-01-01   900  8030  8241   900   基隆   \n",
+       "1     2023-01-01   910  1017  1326   910   三坑   \n",
+       "2     2023-01-01   920  1400  1705   920   八堵   \n",
+       "3     2023-01-01   930  3558  4398   930   七堵   \n",
+       "4     2023-01-01   940  1509  1815   940   百福   \n",
        "...          ...   ...   ...   ...   ...  ...   \n",
-       "86927 2020-12-31  7360  3523  3602  7360   瑞芳   \n",
-       "86928 2020-12-31  7361     3    18  7361  海科館   \n",
-       "86929 2020-12-31  7362    28    34  7362  八斗子   \n",
-       "86930 2020-12-31  7380   609   604  7380  四腳亭   \n",
-       "86931 2020-12-31  7390   377   444  7390   暖暖   \n",
+       "86604 2023-12-31  7360  7916  8252  7360   瑞芳   \n",
+       "86605 2023-12-31  7361   164   195  7361  海科館   \n",
+       "86606 2023-12-31  7362   652   720  7362  八斗子   \n",
+       "86607 2023-12-31  7380  1526   656  7380  四腳亭   \n",
+       "86608 2023-12-31  7390   576   447  7390   暖暖   \n",
        "\n",
        "                                                  地址  \n",
        "0                                        基隆市仁愛區港西街5號  \n",
@@ -172,16 +172,16 @@
        "3                                   基隆市七堵區長興里東新街 2 號  \n",
        "4                              基隆市七堵區堵南里明德三路 1 之 1 號  \n",
        "...                                              ...  \n",
-       "86927                            新北市瑞芳區龍潭里明燈路三段 82 號  \n",
-       "86928                                      基隆市中正區長潭里  \n",
-       "86929  新北市瑞芳區建基路2段121號隔壁 砂子里省道臺 2 線 (與新北市瑞芳區交界處、無站房)  \n",
-       "86930                              新北市瑞芳區吉慶里中央路 65 號  \n",
-       "86931                              基隆市暖暖區暖暖里暖暖街 51 號  \n",
+       "86604                            新北市瑞芳區龍潭里明燈路三段 82 號  \n",
+       "86605                                      基隆市中正區長潭里  \n",
+       "86606  新北市瑞芳區建基路2段121號隔壁 砂子里省道臺 2 線 (與新北市瑞芳區交界處、無站房)  \n",
+       "86607                              新北市瑞芳區吉慶里中央路 65 號  \n",
+       "86608                              基隆市暖暖區暖暖里暖暖街 51 號  \n",
        "\n",
-       "[86932 rows x 7 columns]"
+       "[86609 rows x 7 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,40 @@
     "                      'stationAddrTw':'地址'})\n",
     "stations_name1['編碼'] = stations_name1['編碼'].astype(int)\n",
     "\n",
-    "merge(filename='每日各站進出站人數/每日各站進出站人數2020.csv',station_name=stations_name1)  "
+    "merge(filename='每日各站進出站人數/每日各站進出站人數2023.csv',station_name=stations_name1)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['每日各站進出站人數2020.csv',\n",
+       " '每日各站進出站人數2021.csv',\n",
+       " '每日各站進出站人數20190423-20191231.csv',\n",
+       " '車站基本資料集.json',\n",
+       " '每日各站進出站人數2023.csv',\n",
+       " 'schema.csv',\n",
+       " 'manifest.csv',\n",
+       " '每日各站進出站人數2022.csv']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "current_path = os.path.abspath(__name__)     #目前執行檔案的絕對路徑\n",
+    "main_path = os.path.dirname(current_path)    #取得目前執行檔案的目錄的絕對路徑\n",
+    "\n",
+    "\"每日各站進出站人數\"\n",
+    "dataFolder_path = os.path.join(main_path,\"每日各站進出站人數\")   #取得放資料的目錄\n",
+    "os.listdir(dataFolder_path)    #取得資料目錄的當案名稱"
    ]
   }
  ],
